tried to build angular js app with routers

--- a/angular/settingApp/index.html
+++ b/angular/settingApp/index.html
@@ -19,6 +19,7 @@
             <h2 class="title">{{app.title}}</h2>
             <p class="developer">{{app.developer}}</p>
             <p class="price">{{app.price | currency}}</p>
+            <button>{{app.buttonText}}</button>
           </div>  
         </div>
       </div>
