enabled jQuery in html file and redone all exercise using jQury

--- a/jQuery/index.html
+++ b/jQuery/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>jQuery Try</title>
-	<script type="text/javascript" src="jquery.js"></script>
+	<script src="jquery-3.2.1.js"></script>
 </head>
 <body>
 	<button id="btn">Click Me</button>
@@ -11,7 +11,14 @@
 
 	<input type="text" name="thing" id="item">
 	<ul>
-		<span></span>
+		<span id="list"></span>
+	</ul>
+
+	<h2>My list</h2>
+	<ul>
+		<li>Dog</li>
+		<li>Cat</li>
+		<li>Caw</li>
 	</ul>
 	<script type="text/javascript" src="script1.js"></script>
 </body>
