refactored my jquery code for selector

--- a/jQuery/index.html
+++ b/jQuery/index.html
@@ -15,10 +15,16 @@
 	</ul>
 
 	<h2 id="title">My list</h2>
-	<ul>
+	<ul id="highlight">
 		<li>Dog</li>
 		<li>Cat</li>
 		<li>Caw</li>
+	</ul>
+
+	<p> here is your locaiton details</p>
+	<ul>
+		<li class="location"></li>
+		<li class="location"></li>
 	</ul>
 	<script type="text/javascript" src="script1.js"></script>
 </body>
